# Technical_Evaluation_Maciej_Lubecki

./: .gitignore  CMakeLists.txt  README_mlubecki.md  build.sh  clean.sh  run.sh
src/: Animal.cpp  Animal.h  CMakeLists.txt  Constants.h  Duck.cpp  Duck.h  Functionality.cpp  Functionality.h  Goose.cpp  Goose.h  Main.cpp  Utils.cpp  Utils.h
tests/: AnimalTests.cpp  CMakeLists.txt
